--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets\style.css" />
         <title>Thomas Maher's Portfolio</title>
     </head>
 
@@ -22,11 +22,7 @@
     </nav>
 </header>
 
-<main>
-    <section class="hero">
+    <section class="hero"></section>
 
-    </section>
-
-</main>
 </body>
 </html>
