--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
     <nav>
         <ul>
-            <li><a href="#my-projects">My Projects</a></li>
             <li><a href="#about-me">About Me</a></li>
             <li><a href="#my-skills">My Skills</a></li>
             <li><a href="#contact-me">Contact Me</a></li>
@@ -22,7 +21,24 @@
     </nav>
 </header>
 
-    <section class="hero"></section>
+<h2>My Projects</h2>
+        <section class="projects-section">
+            <div class="project-info">
+                <a href="https://trm621.github.io/run-buddy/" alt="/">Run Buddy</a>
+            </div>
+
+            <div class="project-info">
+                 PLACEHOLDER
+            </div>
+
+            <div class="project-info">
+             PLACEHOLDER
+            </div>
+
+            <div class="project-info">
+            PLACEHOLDER
+            </div>
+    </section>
 
 </body>
 </html>
