fixed hero section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
 <header>
     <h1>Thomas Maher's Portfolio</h1>
-
     <nav>
         <ul>
             <li><a href="#about-me">About Me</a></li>
@@ -21,6 +20,7 @@
     </nav>
 </header>
 
+<section class="hero">
 <h2>My Projects</h2>
         <section class="projects-section">
             <div class="project-info">
@@ -39,6 +39,8 @@
             PLACEHOLDER
             </div>
     </section>
+
+<h3 id="about-me">About Me</h3>
 
 </body>
 </html>
