added About Me, My Skills, and Contact Me sections

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
 </header>
 
-<section class="hero">
+<div class="hero">
 <h2>My Projects</h2>
         <section class="projects-section">
             <div class="project-info">
@@ -39,8 +39,32 @@
             PLACEHOLDER
             </div>
     </section>
+</div>
 
 <h3 id="about-me">About Me</h3>
+<div class="about-me-section">
+    <img src="assets\images\placeholder-image.png" alt="Thomas Maher Headshot" />
+<p>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi sapiente tempore recusandae quas aliquam at officiis laborum saepe vitae reprehenderit fuga culpa ratione eaque sunt libero accusantium, voluptatem, ullam eum?
+</p>
+<br>
+</div>
+
+<div id="my-skills">
+    <h3>My Skills</h3>
+
+</div>
+
+<div id="contact-me">
+    <div class="contact-section">
+    <h3>Contact Me</h3>
+
+        </p>
+
+    </div>
+
+
+</div>
 
 </body>
 </html>
