added content to 'My Skills' section

--- a/index.html
+++ b/index.html
@@ -45,13 +45,33 @@
 <div class="about-me-section">
     <img src="assets\images\placeholder-image.png" alt="Thomas Maher Headshot" />
 <p>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi sapiente tempore recusandae quas aliquam at officiis laborum saepe vitae reprehenderit fuga culpa ratione eaque sunt libero accusantium, voluptatem, ullam eum?
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+    Excepturi sapiente tempore recusandae quas aliquam at officiis 
+    laborum saepe vitae reprehenderit fuga culpa ratione eaque sunt 
+    libero accusantium, voluptatem, ullam eum?
 </p>
-<br>
 </div>
 
-<div id="my-skills">
-    <h3>My Skills</h3>
+<h3 id="my-skills">My Skills</h3>
+<div class="skill-section">
+<div>
+    <ul>
+        <li>PLACEHOLDER</li>
+        <li>PLACEHOLDER</li>
+        <li>PLACEHOLDER</li>
+        <li>PLACEHOLDER</li>
+    </ul>
+</div>
+<div>
+    <ul>
+        <li>PLACEHOLDER</li>
+        <li>PLACEHOLDER</li>
+        <li>PLACEHOLDER</li>
+        <li>PLACEHOLDER</li>
+    </ul>
+</div>
+
+
 
 </div>
 
