changed hero image, rearranged sections, and changed css colors

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <nav>
         <ul>
             <li><a href="#about-me">About Me</a></li>
+            <li><a href="#my-projects">My Projects</a></li>
             <li><a href="#my-skills">My Skills</a></li>
             <li><a href="#contact-me">Contact Me</a></li>
         </ul>
@@ -21,7 +22,19 @@
 </header>
 
 <div class="hero">
-<h2>My Projects</h2>
+<h2 id="about-me">About Me</h2>
+<div class="about-me-section">
+    <img src="assets\images\placeholder-image.png" alt="Thomas Maher Headshot" />
+<p>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+    Excepturi sapiente tempore recusandae quas aliquam at officiis 
+    laborum saepe vitae reprehenderit fuga culpa ratione eaque sunt 
+    libero accusantium, voluptatem, ullam eum?
+</p>
+</div>
+</div>
+
+<h3 id="my-projects">My Projects</h3>
     <section class="projects-section">
         <div class="project-info">
             <a href="https://trm621.github.io/run-buddy/" alt="/">Run Buddy</a>
@@ -39,18 +52,6 @@
             PLACEHOLDER
         </div>
     </section>
-</div>
-
-<h3 id="about-me">About Me</h3>
-<div class="about-me-section">
-    <img src="assets\images\placeholder-image.png" alt="Thomas Maher Headshot" />
-<p>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-    Excepturi sapiente tempore recusandae quas aliquam at officiis 
-    laborum saepe vitae reprehenderit fuga culpa ratione eaque sunt 
-    libero accusantium, voluptatem, ullam eum?
-</p>
-</div>
 
 <h3 id="my-skills">My Skills</h3>
 <div class="skill-section">
