added contact me section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
 
 <div id="contact-me">
     <div class="contact-section">
-    <h3>Contact Me</h3>
+    <h3>Contact Me:</h3>
+    <ul>
+        <li>Email:<a href="mailto: t.maher621@gmail.com"> t.maher621@gmail.com</a></li>
+        <li>Phone: (203) 246-5155</li>
+    </ul>
     </div>
 </div>
 
