added main project container

--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
 </div>
 
 <h3 id="my-projects">My Projects</h3>
+    <container class="main-project">
+        <a>PLACEHOLDER</a>
+    </container>
     <section class="projects-section">
         <div class="project-info">
-            <a href="https://trm621.github.io/run-buddy/" alt="/">Run Buddy</a>
+            <a>PLACEHOLDER</a>
         </div>
 
         <div class="project-info">
