--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 </header>
 
 <div class="hero">
-<h2 id="about-me">About Me</h2>
+</div>
+
+<h3 id="about-me">About Me</h3>
 <div class="about-me-section">
     <img src="assets\images\placeholder-image.png" alt="Thomas Maher Headshot" />
 <p>
@@ -32,27 +34,28 @@
     libero accusantium, voluptatem, ullam eum?
 </p>
 </div>
-</div>
 
 <h3 id="my-projects">My Projects</h3>
-    <container class="main-project">
-        <a>PLACEHOLDER</a>
-    </container>
+
+        <div class="main-project">
+            <a href="#">PLACEHOLDER</a>
+        </div>
+
     <section class="projects-section">
         <div class="project-info">
-            <a>PLACEHOLDER</a>
+            <a href="#">PLACEHOLDER</a>
         </div>
 
         <div class="project-info">
-            PLACEHOLDER
+            <a href="#">PLACEHOLDER</a>
         </div>
 
         <div class="project-info">
-            PLACEHOLDER
+            <a href="#">PLACEHOLDER</a>
         </div>
 
         <div class="project-info">
-            PLACEHOLDER
+            <a href="#">PLACEHOLDER</a>
         </div>
     </section>
 
