added background images to project elements

--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
         </div>
 
     <section class="projects-section">
-        <div class="project-info">
+        <div class="project-info-1">
             <a href="#">PLACEHOLDER</a>
         </div>
 
-        <div class="project-info">
+        <div class="project-info-2">
             <a href="#">PLACEHOLDER</a>
         </div>
 
-        <div class="project-info">
+        <div class="project-info-3">
             <a href="#">PLACEHOLDER</a>
         </div>
 
-        <div class="project-info">
+        <div class="project-info-4">
             <a href="#">PLACEHOLDER</a>
         </div>
     </section>
