--- a/index.html
+++ b/index.html
@@ -26,12 +26,18 @@
 
 <h2 id="about-me">About Me</h2>
 <div class="about-me-section">
-    <img src="assets\images\placeholder-image.png" alt="Thomas Maher Headshot" />
+    <img src="assets/images/profile-picture.jpg" alt="Thomas Maher Headshot" />
 <p>
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
     Excepturi sapiente tempore recusandae quas aliquam at officiis 
     laborum saepe vitae reprehenderit fuga culpa ratione eaque sunt 
-    libero accusantium, voluptatem, ullam eum?
+    libero accusantium, voluptatem, ullam eum? Lorem ipsum dolor sit 
+    amet consectetur adipisicing elit. Modi sed harum molestias dolorem 
+    fugiat cum voluptate rem consectetur possimus laboriosam sequi iusto, 
+    fugit quibusdam? Consequuntur quisquam cumque fuga quis sit. Lorem ipsum 
+    dolor sit amet consectetur adipisicing elit. Cumque aliquam harum nihil mollitia 
+    fugiat maiores. Maiores perspiciatis qui, porro animi, saepe in, architecto numquam 
+    expedita deserunt reprehenderit consequuntur explicabo incidunt.
 </p>
 </div>
 
