edited flexboxes in about me section and changed css for my projects section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 <div class="hero">
 </div>
 
+<!--about me section-->
+
 <h2 id="about-me">About Me</h2>
 <div class="about-me-section">
     <img src="assets/images/profile-picture.jpg" alt="Thomas Maher Headshot" />
@@ -32,14 +34,11 @@
     Excepturi sapiente tempore recusandae quas aliquam at officiis 
     laborum saepe vitae reprehenderit fuga culpa ratione eaque sunt 
     libero accusantium, voluptatem, ullam eum? Lorem ipsum dolor sit 
-    amet consectetur adipisicing elit. Modi sed harum molestias dolorem 
-    fugiat cum voluptate rem consectetur possimus laboriosam sequi iusto, 
-    fugit quibusdam? Consequuntur quisquam cumque fuga quis sit. Lorem ipsum 
-    dolor sit amet consectetur adipisicing elit. Cumque aliquam harum nihil mollitia 
-    fugiat maiores. Maiores perspiciatis qui, porro animi, saepe in, architecto numquam 
-    expedita deserunt reprehenderit consequuntur explicabo incidunt.
+    amet consectetur adipisicing elit. 
 </p>
 </div>
+
+<!--my projects section-->
 
 <h2 id="my-projects">My Projects</h2>
 
@@ -65,6 +64,8 @@
         </div>
     </section>
 
+<!--my skills section-->
+
 <h2 id="my-skills">My Skills</h2>
 <div class="skill-section">
 <div>
@@ -85,6 +86,8 @@
 </div>
 
 </div>
+
+<!--contact me section-->
 
 <div id="contact-me">
     <div class="contact-section">
