made whole project div clickable

--- a/index.html
+++ b/index.html
@@ -41,27 +41,33 @@
 <!--my projects section-->
 
 <h2 id="my-projects">My Projects</h2>
-
+    <a href="#">
         <div class="main-project">
-            <a href="#">PLACEHOLDER</a>
+            PLACEHOLDER
         </div>
-
+    </a>
     <section class="projects-section">
+
+    <a href="#">
         <div class="project-info-1">
-            <a href="#">PLACEHOLDER</a>
+            PLACEHOLDER
         </div>
-
+    </a>
+    <a href="#">
         <div class="project-info-2">
-            <a href="#">PLACEHOLDER</a>
+            PLACEHOLDER
         </div>
-
+    </a>
+    <a href="#">
         <div class="project-info-3">
-            <a href="#">PLACEHOLDER</a>
+            PLACEHOLDER
         </div>
-
+    </a>
+    <a href="#">
         <div class="project-info-4">
-            <a href="#">PLACEHOLDER</a>
+            PLACEHOLDER
         </div>
+    </a>
     </section>
 
 <!--my skills section-->
