deleted unnecessary media queries, made nav bar bold, increased font size for h1

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h1>Thomas Maher's Portfolio</h1>
     <nav>
         <ul>
-            <li><a href="#about-me">About Me</a></li>
-            <li><a href="#my-projects">My Projects</a></li>
-            <li><a href="#contact-me">Contact Me</a></li>
+            <li><a href="#about-me"><b>About Me</b></a></li>
+            <li><a href="#my-projects"><b>My Work</b></a></li>
+            <li><a href="#contact-me"><b>Contact Me</b></a></li>
         </ul>
     </nav>
 </header>
@@ -39,7 +39,7 @@
 
 <!--my projects section-->
 
-<h2 id="my-projects">My Projects</h2>
+<h2 id="my-projects">My Work</h2>
     <a href="#">
         <div class="main-project">
             PLACEHOLDER
