--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
 <!--my projects section-->
 
 <h2 id="my-projects">My Work</h2>
-    <a href="#">
+    <a href="https://trm621.github.io/movie-night-generator/">
         <div class="main-project">
-            PLACEHOLDER
+            Binge Buddy
         </div>
     </a>
     <section class="projects-section">
 
-    <a href="#">
+    <a href="https://trm621.github.io/work-day-scheduler/">
         <div class="project-info-1">
-            PLACEHOLDER
+            Word Day Scheduler
         </div>
     </a>
     <a href="#">
