changed about me description

--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@
 <div class="about-me-section">
     <img src="assets/images/profile-picture.jpg" alt="Thomas Maher Headshot" />
 <p>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-    Excepturi sapiente tempore recusandae quas aliquam at officiis 
-    laborum saepe vitae reprehenderit fuga culpa ratione eaque sunt 
-    libero accusantium, voluptatem, ullam eum? Lorem ipsum dolor sit 
-    amet consectetur adipisicing elit. 
+    How are you today? My name is Thomas Maher. My friends call me Tom. I love
+    music, movies, video games, and making people laugh. I'm currently enrolled
+    in the UConn Coding Bootcamp to hone my skills as a web developer. See my
+    work below! 
 </p>
 </div>
 
