--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     </a>
     <section class="projects-section">
 
-    <a href="https://trm621.github.io/work-day-scheduler/">
+    <a href="https://evening-retreat-41294.herokuapp.com/">
         <div class="project-info-1">
-            Word Day Scheduler
+            Beach Blog
         </div>
     </a>
     <a href="#">
