--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 <!--my projects section-->
 
 <h2 id="my-projects">My Work</h2>
-    <a href="https://trm621.github.io/movie-night-generator/">
+    <a href="https://evening-retreat-41294.herokuapp.com/"></a>
+    
         <div class="main-project">
             Binge Buddy
         </div>
     </a>
     <section class="projects-section">
-
-    <a href="https://evening-retreat-41294.herokuapp.com/">
+    <a href="https://trm621.github.io/movie-night-generator/">
         <div class="project-info-1">
             Beach Blog
         </div>
