fixed broken link

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <!--my projects section-->
 
 <h2 id="my-projects">My Work</h2>
-    <a href="https://evening-retreat-41294.herokuapp.com/"></a>
+    <a href="https://evening-retreat-41294.herokuapp.com/">
         <div class="main-project">
             Beach Blog
         </div>
