--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@
 </p>
 </div>
 
+<h2 id="languages">Coding Experience</h2>
+<br>
+<br>
+<ol class="languages">
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+    <li>Server-side, Client-side, and third party APIs</li>
+    <li>Node.js</li>
+    <li>Express.js</li>
+    <li>SQL</li>
+    <li>Object Oriented Programming</li>
+</ol>
+
 <!--my projects section-->
 
 <h2 id="my-projects">My Work</h2>
@@ -74,6 +88,7 @@
     <h2>Contact Me:</h2>
     <ul>
         <li>Email:<a href="mailto: t.maher621@gmail.com"> t.maher621@gmail.com</a></li>
+        <li>GitHub Account:<a href="https://github.com/trm621">trm621</a></li>
         <li>Phone: (203) 246-5155</li>
     </ul>
     </div>
