--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </p>
 </div>
 
-<h2 id="languages">Coding Experience</h2>
+<!-- <h2 id="languages">Coding Experience</h2>
 <br>
 <br>
 <ol class="languages">
@@ -48,7 +48,7 @@
     <li>Express.js</li>
     <li>SQL</li>
     <li>Object Oriented Programming</li>
-</ol>
+</ol> -->
 
 <!--my projects section-->
 
